--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -122,7 +122,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".friendPage">
+        <activity android:name=".shareSocial">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
